# OpenCost

./: Makefile  README.md
backend/: pyproject.toml
backend/data/samples/: openclaw_sessions.jsonl  telemetry.jsonl
backend/opencost/api/: main.py
backend/opencost/classification/: heuristics.py
backend/opencost/cli/: app.py
backend/opencost/core/: config.py
backend/opencost/db/: init_db.py  session.py
backend/opencost/examples/openclaw/: provider_api_guide.md  provider_endpoints_data_structures.md  sample_api_usage.py  sample_hook.md  sample_opencost_config.yaml
backend/opencost/ingestion/: normalize.py  service.py
backend/opencost/migrations/: 0001_init.sql
backend/opencost/models/: __init__.py  models.py
backend/opencost/optimizer/: engine.py
backend/opencost/pricing/: engine.py
backend/opencost/pricing/seeds/: pricing.yaml
backend/opencost/providers/: __init__.py  client.py  pipeline.py
backend/opencost/schemas/: api.py
backend/opencost/seed/: dev_seed.py
backend/opencost/services/: analytics_service.py  core.py
backend/tests/: test_classification.py  test_normalize.py  test_pricing.py  test_provider_pipeline.py  test_providers.py  test_recommendations.py
frontend/: package.json  tsconfig.json
frontend/src/components/: Layout.jsx  Layout.tsx
frontend/src/components/cards/: KpiCard.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: _app.jsx  configs.jsx  index.jsx  index.tsx  recommendations.jsx  usage.jsx
ios/AgentUsageTracker/: README.md
ios/AgentUsageTracker/AgentUsageTrackerCore/: Package.swift
(+20 files in other folders)
